@@ -10,7 +10,9 @@ v2.0-git
 v1.2.4-cvs
 ----------
 
-[jan] Support composite header rules with IMAP backends (Bug #7343).
+[jan] Support some non-standard Date: headers in Sieve vacation rules
+      (Request #8783).
+[jan] Support composite header rules with IMAP backends (Request #7343).
 [jan] Fix unconditional debug output with Net_Sieve earlier than 1.2.0
       (Bug #8794).
 [jan] Add Sieve configuration to use UTF-8 encoded folder names (for Dovecot)
